Tue Feb 15 20:10:03 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * java/ant/build.properties:
        * java/ant/build.xml:

          Set Java compatibility to 1.5, some build machines don't have 1.6.

        * java/jms/lib/opendds-ant.jar:

          Rebuilt with Java 1.5 compatibility.

Tue Feb 15 18:55:55 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/icons:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/icons:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/icons/obj16:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/icons:

          svn:ignore files not under revision control.

Tue Feb 15 18:51:04 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/icons/obj16/DataLib.gif:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/plugin.xml:

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/icons/obj16/DcpsLib.gif:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:

        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/icons/obj16/PolicyLib.gif:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/plugin.xml:

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:

          For now get correct icons to show up on editor tabs by using icons outside
          of org.opendds.modeling.common. Although we should be able to point