@@ -1,3 +1,9 @@
+Tue Feb 15 19:49:58 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
+
+        * tools/modeling/codegen/model/Delegate.cpp:
+
+          Ignore ContentFilteredTopic when not in the build.
+
 Tue Feb 15 20:10:03 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * java/ant/build.properties:
